fix overflow hidden bug

--- a/packages/app/components/PostToggle.module.css
+++ b/packages/app/components/PostToggle.module.css
@@ -5,7 +5,6 @@
   
   border-radius: 50px;
   overflow: hidden;
-  transform: translate3d(0, 0, 0);
 }
 
 .background {
